<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartMotion</string>
    <string name="ad_unit_id">ca-app-pub-4307857394833064/3620439034</string>
    <string name="action_settings">Settings</string>
    <string name="edit_user_name_message">Insert Username</string>
    <string name="edit_password_message">Insert Password</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
    <string name="title_activity_main_menu">My Gestures</string>
    <string name="new_gesture">New</string>
    <string name="settings">Settings</string>
    <string name="title_activity_new__gesture">New Gesture</string>
    <string name="title_activity_settings">Settings</string>
    <string name="edit_new_gest_message">Insert Name</string>
    <string name="record">Record New Gesture</string>
    <string name="set_trigger">Set Trigger</string>
    <string name="Sync">Syncronize Gestures</string>
    <string name="hello">here will appear the apps with metadata</string>
    <string name="hello2">here will appear the settings</string>
    <string name="title_activity_all_apps">App Selection</string>
    <string name="select_app">Select App to Launch</string>
    <string name="new_gesture_filter_label">New Gesture Filter</string>
    <string name="app_selected_init">App to Launch: Empty</string>
    <string name="title_activity_popup_menu">Popup_menu</string>
    <string name="hello_world">Hello world!</string>
    <string name="delete_gesture">Delete Gesture</string>

</resources>
