<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/usr_name_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_user_name_message" />
    
    <EditText
        android:id="@+id/pass_name_edit"
        android:layout_below="@id/usr_name_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_password_message" />
    
    <Button 
        android:id="@+id/signIn_button"
        android:layout_below="@id/pass_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignIn" 
        />

    <Button 
        android:id="@+id/signUp_button"
        android:layout_below="@id/signIn_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUp" 
        />
    
    <Button 
        android:id="@+id/startService"
        android:layout_below="@id/signUp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Service" 
        />
    
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_id"/>
    
</RelativeLayout>
