<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".New_Gesture" >

   

     <Button 
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_app" 
        android:onClick="select_app"
        />
     
     <TextView
         android:id="@+id/app_selected"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/list"
         android:text="@string/app_selected_init"
         android:textSize="7pt" />
    
    <Button 
        android:id="@+id/new_gesture"
        android:layout_below="@id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record" 
        />
    
</RelativeLayout>
